Fixed image on home page

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -3,10 +3,4 @@ title: Home
 description: "Welcome to GTA V Transcripts"
 ---
 
-<img
-  className="block dark:hidden"
-  src="https://images2.alphacoders.com/519/thumb-1920-519170.jpg"
-  alt="Hero Light"
-/>
-
-
+![Home](https://images2.alphacoders.com/519/thumb-1920-519170.jpg)
