Added frame to the main banner

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -3,4 +3,6 @@ title: Home
 description: "Welcome to GTA V Transcripts"
 ---
 
+<Frame>
 ![Home](https://images2.alphacoders.com/519/thumb-1920-519170.jpg)
+</Frame>
