--- a/introduction.mdx
+++ b/introduction.mdx
@@ -7,4 +7,27 @@ description: "Welcome to GTA V Transcripts"
 ![Home](https://images2.alphacoders.com/519/thumb-1920-519170.jpg)
 </Frame>
 
-T
+# About GTA V Transcripts
+
+**GTA V Transcripts** is a fan-made project dedicated to documenting every line of dialogue from every mission in *Grand Theft Auto V*.
+
+Whether you're a writer, a modder, a voice acting enthusiast, or just a curious fan, this site provides accurate, readable transcripts to help you explore the story of GTA V in full detail, from the opening heist to the final showdown.
+
+### 🎯 Why this exists
+
+GTA V is full of unforgettable moments, witty banter, and deep character interactions — but most of that dialogue is locked behind gameplay. This site makes the entire script accessible in one place, mission by mission.
+
+### 💡 Features
+
+- Transcripts for every main story mission  
+- Character-attributed dialogue in a clean, readable format  
+- Searchable, collapsible layout (coming soon!)  
+- 100% spoiler-filled — you've been warned!
+
+### 🙌 A Note from the Creator
+
+Hi, I’m Isaac — this project started as a personal way to dig deeper into the world of GTA V. If you find it useful or just fun to read through, I’d love to hear from you!
+
+---
+
+This project is not affiliated with Rockstar Games. All content belongs to its respective owners and is used here for informational and educational purposes.
