--- a/missions/story/prologue.mdx
+++ b/missions/story/prologue.mdx
@@ -4,3 +4,7 @@ description: Prologue is the first mission in Grand Theft Auto V, involving Mich
 icon: flag-checkered
 ---
 
+| Character | Dialogue |
+|----------|----------|
+| Michael  | You forget a thousand things every day, pal. Make sure this is one of them. |
+| Franklin | Man, I ain't your homie! |
