--- a/missions/story/prologue.mdx
+++ b/missions/story/prologue.mdx
@@ -8,3 +8,6 @@ icon: flag-checkered
 |----------|----------|
 | Michael  | You forget a thousand things every day, pal. Make sure this is one of them. |
 | Franklin | Man, I ain't your homie! |
+
+**Michael:** You forget a thousand things every day, pal. Make sure this is one of them.  
+**Franklin:** Man, I ain't your homie!
