wanna see how it looks

--- a/missions/story/prologue.mdx
+++ b/missions/story/prologue.mdx
@@ -3,11 +3,10 @@ title: Prologue
 description: Prologue is the first mission in Grand Theft Auto V, involving Michael Townley and Trevor Philips. It is set in 2004 in the town of Ludendorff, North Yankton.
 icon: flag-checkered
 ---
-
-| Character | Dialogue |
-|----------|----------|
-| Michael  | You forget a thousand things every day, pal. Make sure this is one of them. |
-| Franklin | Man, I ain't your homie! |
-
-**Michael:** You forget a thousand things every day, pal. Make sure this is one of them.  
-**Franklin:** Man, I ain't your homie!
+<Accordion title="Introduction - Breaking into Depot">
+**Brad:** Get down there!
+**Micheal:** Alright, everybody pays attention, no one gets hurt.
+Trevor knocks his rifle on a window, with a panicking security guard behind it.
+**Brad:** Get down there!
+**Micheal:** Alright, everybody pays attention, no one gets hurt.
+</Accordion>
