--- a/missions/story/prologue.mdx
+++ b/missions/story/prologue.mdx
@@ -7,6 +7,5 @@ icon: flag-checkered
 **Brad:** Get down there!
 **Micheal:** Alright, everybody pays attention, no one gets hurt.
 Trevor knocks his rifle on a window, with a panicking security guard behind it.
-**Brad:** Get down there!
-**Micheal:** Alright, everybody pays attention, no one gets hurt.
+**Trevor:** Aarrgh! Open the door, or they'll get worse than hurt! Hey, hey, ah! Come on!
 </Accordion>
