--- a/missions/story/prologue.mdx
+++ b/missions/story/prologue.mdx
@@ -4,8 +4,16 @@ description: Prologue is the first mission in Grand Theft Auto V, involving Mich
 icon: flag-checkered
 ---
 <Accordion title="Introduction - Breaking into Depot">
-**Brad:** Get down there!
-**Micheal:** Alright, everybody pays attention, no one gets hurt.
+| Character | Dialogue |
+|----------|----------|
+| Brad  | Get down there! |
+| Micheal | Alright, everybody pays attention, no one gets hurt. |
 Trevor knocks his rifle on a window, with a panicking security guard behind it.
-**Trevor:** Aarrgh! Open the door, or they'll get worse than hurt! Hey, hey, ah! Come on!
+| Character | Dialogue |
+|----------|----------|
+| Trevor | Aarrgh! Open the door, or they'll get worse than hurt! Hey, hey, ah! Come on! |
+The security guard opens the door. Trevor kicks the door open.
+| Character | Dialogue |
+|----------|----------|
+| Trevor | Aarrgh! Open the door, or they'll get worse than hurt! Hey, hey, ah! Come on! |
 </Accordion>
