--- a/missions/story/prologue.mdx
+++ b/missions/story/prologue.mdx
@@ -15,5 +15,5 @@ Trevor knocks his rifle on a window, with a panicking security guard behind it.
 The security guard opens the door. Trevor kicks the door open.
 | Character | Dialogue |
 |----------|----------|
-| Trevor | Aarrgh! Open the door, or they'll get worse than hurt! Hey, hey, ah! Come on! |
+| Trevor | Argh, finally, you prick! |
 </Accordion>
