--- a/missions/story/prologue.mdx
+++ b/missions/story/prologue.mdx
@@ -3,25 +3,12 @@ title: Prologue
 description: Prologue is the first mission in Grand Theft Auto V, involving Michael Townley and Trevor Philips. It is set in 2004 in the town of Ludendorff, North Yankton.
 icon: flag-checkered
 ---
-<Accordion title="Introduction - Breaking into Depot">
-| Character | Dialogue |
-|----------|----------|
-| Brad  | Get down there! |
-| Micheal | Alright, everybody pays attention, no one gets hurt. |
----
 
-Trevor knocks his rifle on a window, with a panicking security guard behind it.
-
----
-| Character | Dialogue |
-|----------|----------|
-| Trevor | Aarrgh! Open the door, or they'll get worse than hurt! Hey, hey, ah! Come on! |
----
-
-The security guard opens the door. Trevor kicks the door open.
-
----
-| Character | Dialogue |
-|----------|----------|
-| Trevor | Argh, finally, you prick! |
-</Accordion>
+### Introduction - Breaking into Depot
+**Brad:** Get down there!
+**Michael:** Alright, everybody pays attention, no one gets hurt.
+> **Trevor** knocks his rifle on a window, with a panicking security guard behind it.
+**Trevor:** Aarrgh! Open the door, or they'll get worse than hurt! Hey, hey, ah! Come on!
+> The security guard opens the door. **Trevor** kicks the door open.
+**Trevor:** Argh, finally, you prick!
+> **Trevor** hits the security guard with the stock of his rifle.
