Documentation edits made through Mintlify web editor

--- a/missions/story/prologue.mdx
+++ b/missions/story/prologue.mdx
@@ -1,20 +1,113 @@
 ---
-title: Prologue 
-description: Prologue is the first mission in Grand Theft Auto V, involving Michael Townley and Trevor Philips. It is set in 2004 in the town of Ludendorff, North Yankton.
-icon: flag-checkered
+title: "Prologue"
+description: "Prologue is the first mission in Grand Theft Auto V, involving Michael Townley and Trevor Philips. It is set in 2004 in the town of Ludendorff, North Yankton."
+icon: "flag-checkered"
 ---
 
 ### Introduction - Breaking into Depot
-**Brad:** Get down there!
+
+**Brad:** Get down there\!
 
 **Michael:** Alright, everybody pays attention, no one gets hurt.
 
 > **Trevor** knocks his rifle on a window, with a panicking security guard behind it.
 
-**Trevor:** Aarrgh! Open the door, or they'll get worse than hurt! Hey, hey, ah! Come on!
+**Trevor:** Aarrgh\! Open the door, or they'll get worse than hurt\! Hey, hey, ah\! Come on\!
 
 > The security guard opens the door. **Trevor** kicks the door open.
 
-**Trevor:** Argh, finally, you prick!
+**Trevor:** Argh, finally, you prick\!
 
 > **Trevor** hits the security guard with the stock of his rifle.
+
+**Trevor:** Let's go, shut up\! Shut the fuck up\!
+**Alternative:** Come on. In the back. Come on. Come on.
+**Alternative:** In the back. Come on. Let's go. Come on.
+**Alternative:** Get in here and deal with the guard\!
+
+<AccordionGroup>
+  <Accordion title="Alternative Dialogue - Micheal kills a hostage">
+    If \*\*Michael \*\*kills the hostage whom Brad holds at gunpoint, Brad either laments that he is not the one who killed the civilian or complains about the civilian being killed in general before the mission fails.
+
+    **Brad:** Hey\! Prick\! Behave yourself\!\
+    **Alternative:** Hey\! They're collateral\!
+    **Alternative:** If anyone's killing hostages, it's me.
+    **Alternative:** No more of that, asshole. Come on.
+    **Alternative:** So, you're not getting none from that ex-stripper.
+    **Alternative:** This wasn't meant to get messy\!
+    **Alternative:** We need'em alive, dick.
+    **Mission failure: A hostage died.**
+  </Accordion>
+  <Accordion title="Alternative Dialogue - Micheal does not enter the room">
+    If **Michael** does not enter the room immediately, Trevor calls out Michael. Brad gets uneasy.
+
+    **Trevor:** Clear the room.
+    **Alternative:** Come on through.
+    **Alternative:** In here. Come on.
+    **Alternative:** Where the fuck is your head, man?
+    **Alternative:** You want me to pop this guy?
+
+    **Brad:** Come on\! Come on\!
+    **Alternative:** He's looking at me\!
+    **Alternative:** Let's get this done\!
+    **Alternative:** This shouldn't take so long\!
+    **Alternative:** We're losing time\!
+  </Accordion>
+</AccordionGroup>
+
+### Taking Hostages
+
+> **Michael** enters the room where the guard and two other hostages are.
+
+**Micheal:** Hands behind your back.
+
+> **Michael** starts handcuffing the security guard.
+
+**Security Guard:** C'mon mister, we're giving you everything you want.
+
+> One of the two hostages tries to ring the alarm but sees that **Michael** holds him at gunpoint and raises his hands.
+
+**Micheal:** Don't even think about it.
+
+> **Michael** kicks the security guard towards the other hostages.
+
+**Woman:** I'll do it. I'll do it... Oh God.
+
+> **Brad** pushes the hostage, who was thrown and held at gunpoint before, into the room, as he yells at her.
+
+**Brad:** Get in there\!
+
+> **Trevor** proceeds to plant explosives on the vault door.
+
+**Trevor:** Sit tight. I'll handle the plastic.
+
+**Brad:** Don't blow yourself up!
+
+<AccordionGroup>
+  <Accordion title="Alternative Dialogue - Michael pointing the gun at hostages">
+    **Michael** aims his weapon and yells at the hostages and crew members.
+
+    **Micheal:** Come on, let's go!
+    **Alternative:** Hurry!
+    **Alternative:** Listen up!
+    **Alternative:** Pay attention.
+    **Alternative:** You!
+    **Michael** aims at the hostages and makes them move to the back room.
+  </Accordion>
+  <Accordion title="Alternative Dialogue - Michael standing still">
+    If **Michael** stands still, **Brad** calls out **Michael**. If Trevor comes back meanwhile, he will complain.
+
+    **Trevor:** Clear the room.
+    **Alternative:** Come on through.
+    **Alternative:** In here. Come on.
+    **Alternative:** Where the fuck is your head, man?
+    **Alternative:** You want me to pop this guy?
+
+    **Brad:** Come on\! Come on\!
+    **Alternative:** He's looking at me\!
+    **Alternative:** Let's get this done\!
+    **Alternative:** This shouldn't take so long\!
+    **Alternative:** We're losing time\!
+  </Accordion>
+</AccordionGroup>
+
