Documentation edits made through Mintlify web editor

--- a/missions/story/prologue.mdx
+++ b/missions/story/prologue.mdx
@@ -4,62 +4,61 @@ description: "Prologue is the first mission in Grand Theft Auto V, involving Mic
 icon: "flag-checkered"
 ---
 
-### Introduction - Breaking into Depot
+### ⭐ Introduction - Breaking into Depot
 
-**Brad:** Get down there\!
-
+**Brad:** Get down there!
 **Michael:** Alright, everybody pays attention, no one gets hurt.
 
 > **Trevor** knocks his rifle on a window, with a panicking security guard behind it.
 
-**Trevor:** Aarrgh\! Open the door, or they'll get worse than hurt\! Hey, hey, ah\! Come on\!
+**Trevor:** Aarrgh! Open the door, or they'll get worse than hurt! Hey, hey, ah! Come on!
 
 > The security guard opens the door. **Trevor** kicks the door open.
 
-**Trevor:** Argh, finally, you prick\!
+**Trevor:** Argh, finally, you prick!
 
 > **Trevor** hits the security guard with the stock of his rifle.
 
-**Trevor:** Let's go, shut up\! Shut the fuck up\!
-**Alternative:** Come on. In the back. Come on. Come on.
-**Alternative:** In the back. Come on. Let's go. Come on.
-**Alternative:** Get in here and deal with the guard\!
+**Trevor:** Let's go, shut up! Shut the fuck up!  
+**Alternative:** Come on. In the back. Come on. Come on.  
+**Alternative:** In the back. Come on. Let's go. Come on.  
+**Alternative:** Get in here and deal with the guard!
 
 <AccordionGroup>
-  <Accordion title="Alternative Dialogue - Micheal kills a hostage">
-    If \*\*Michael \*\*kills the hostage whom Brad holds at gunpoint, Brad either laments that he is not the one who killed the civilian or complains about the civilian being killed in general before the mission fails.
+  <Accordion title="Alternative Dialogue - Michael kills a hostage">
+    If **Michael** kills the hostage whom Brad holds at gunpoint, Brad either laments that he is not the one who killed the civilian or complains about the civilian being killed in general before the mission fails.
 
-    **Brad:** Hey\! Prick\! Behave yourself\!\
-    **Alternative:** Hey\! They're collateral\!
-    **Alternative:** If anyone's killing hostages, it's me.
-    **Alternative:** No more of that, asshole. Come on.
-    **Alternative:** So, you're not getting none from that ex-stripper.
-    **Alternative:** This wasn't meant to get messy\!
-    **Alternative:** We need'em alive, dick.
+    **Brad:** Hey! Prick! Behave yourself!  
+    **Alternative:** Hey! They're collateral!  
+    **Alternative:** If anyone's killing hostages, it's me.  
+    **Alternative:** No more of that, asshole. Come on.  
+    **Alternative:** So, you're not getting none from that ex-stripper.  
+    **Alternative:** This wasn't meant to get messy!  
+    **Alternative:** We need'em alive, dick.  
     **Mission failure: A hostage died.**
   </Accordion>
-  <Accordion title="Alternative Dialogue - Micheal does not enter the room">
+  <Accordion title="Alternative Dialogue - Michael does not enter the room">
     If **Michael** does not enter the room immediately, Trevor calls out Michael. Brad gets uneasy.
 
-    **Trevor:** Clear the room.
-    **Alternative:** Come on through.
-    **Alternative:** In here. Come on.
-    **Alternative:** Where the fuck is your head, man?
+    **Trevor:** Clear the room.  
+    **Alternative:** Come on through.  
+    **Alternative:** In here. Come on.  
+    **Alternative:** Where the fuck is your head, man?  
     **Alternative:** You want me to pop this guy?
 
-    **Brad:** Come on\! Come on\!
-    **Alternative:** He's looking at me\!
-    **Alternative:** Let's get this done\!
-    **Alternative:** This shouldn't take so long\!
-    **Alternative:** We're losing time\!
+    **Brad:** Come on! Come on!  
+    **Alternative:** He's looking at me!  
+    **Alternative:** Let's get this done!  
+    **Alternative:** This shouldn't take so long!  
+    **Alternative:** We're losing time!
   </Accordion>
 </AccordionGroup>
 
-### Taking Hostages
+### 🔫 Taking Hostages
 
 > **Michael** enters the room where the guard and two other hostages are.
 
-**Micheal:** Hands behind your back.
+**Michael:** Hands behind your back.
 
 > **Michael** starts handcuffing the security guard.
 
@@ -67,7 +66,7 @@ icon: "flag-checkered"
 
 > One of the two hostages tries to ring the alarm but sees that **Michael** holds him at gunpoint and raises his hands.
 
-**Micheal:** Don't even think about it.
+**Michael:** Don't even think about it.
 
 > **Michael** kicks the security guard towards the other hostages.
 
@@ -75,39 +74,136 @@ icon: "flag-checkered"
 
 > **Brad** pushes the hostage, who was thrown and held at gunpoint before, into the room, as he yells at her.
 
-**Brad:** Get in there\!
+**Brad:** Get in there!
 
 > **Trevor** proceeds to plant explosives on the vault door.
 
 **Trevor:** Sit tight. I'll handle the plastic.
-
 **Brad:** Don't blow yourself up!
 
 <AccordionGroup>
   <Accordion title="Alternative Dialogue - Michael pointing the gun at hostages">
     **Michael** aims his weapon and yells at the hostages and crew members.
 
-    **Micheal:** Come on, let's go!
-    **Alternative:** Hurry!
-    **Alternative:** Listen up!
-    **Alternative:** Pay attention.
-    **Alternative:** You!
+    **Michael:** Come on, let's go!  
+    **Alternative:** Hurry!  
+    **Alternative:** Listen up!  
+    **Alternative:** Pay attention.  
+    **Alternative:** You!  
     **Michael** aims at the hostages and makes them move to the back room.
   </Accordion>
   <Accordion title="Alternative Dialogue - Michael standing still">
     If **Michael** stands still, **Brad** calls out **Michael**. If Trevor comes back meanwhile, he will complain.
 
-    **Trevor:** Clear the room.
-    **Alternative:** Come on through.
-    **Alternative:** In here. Come on.
-    **Alternative:** Where the fuck is your head, man?
-    **Alternative:** You want me to pop this guy?
+    **Brad:** M! Get these assholes in the closet!
+    **Brad:** I said the closet! Get 'em in there! Come on!
+    **Trevor:** What is the problem? Why are they still out here? You were meant to lock 'em down. 
+    After **Trevor** complains, **Brad* aims at the hostages and makes them move to the back room.
+  </Accordion>
+  <Accordion title="Alternative Dialogue - Michael killing a hostage">
+    If **Michael** kills a hostage in the room, Brad complains before mission failure.
 
-    **Brad:** Come on\! Come on\!
-    **Alternative:** He's looking at me\!
-    **Alternative:** Let's get this done\!
-    **Alternative:** This shouldn't take so long\!
-    **Alternative:** We're losing time\!
+    **Brad:** We need'em alive, dick!
+    **Mission failure: A hostage died.**
   </Accordion>
 </AccordionGroup>
 
+### 🏃‍♂️‍➡️ Moving Hostages
+
+**Brad:** In the back! Come on!
+
+> The hostages get upset, and agitated.
+
+**Male Employee:** What's he doing? He's going to kill us in here.
+**Male Employee:** Leave us alone.
+**Second Male Employee:** We didn't do shit to you
+
+> Either **Trevor** re-enters the room after the hostages enter the back room or re-enters and waits until they get in. In either case, **Brad** locks the door after all hostages enter the back room.
+
+**Trevor:** All set. Phone it in.
+
+<AccordionGroup>
+<Accordion title="Alternative Dialogue - Michael calls immediately">
+  If **Michael** uses his phone to detonate the bomb immediately, he informs the crew.
+
+  **Michael:** I'm calling it.
+  **Alternative:** I'm making the call.
+</Accordion>
+<Accordion title="Alternative Dialogue  Michael doesn't call immediately">
+  If **Michael** does not phone immediately, **Brad** and **Trevor** call out **Michael**. The order of the dialogue is random.
+
+  **Brad:** Blow the door!
+  **Brad:** C'mon! C'mon!
+  **Brad:** We gonna do this?!
+  **Trevor:** Blow the fucking door!
+  **Trevor:** Call already.
+  **Trevor:** Come on. Call it in!
+  **Trevor:** Detonate!
+  **Trevor:** Get your cell out and dial.
+  **Trevor:** We ain't got time for this crap!
+</Accordion>
+</AccordionGroup>
+
+### 💰 Stealing Money
+> **Michael** enters the vault.
+
+**Trevor:** Oh, there it is.
+**Alternative:** That's the score.
+**Alternative:** We're just taking the non-sequential notes.
+
+> **Michael** and **Trevor** start collecting the money.
+
+**Trevor:** Oh... there's enough here for us all to enjoy!
+**Michael:** Depends on how you look at it.
+
+> **Michael** finishes collecting the money. **Trevor** is standing at the entrance of the vault.
+
+**Trevor:** We gotta move.
+**Alternative:** We're done here, let's go.
+
+<Accordion title="Alternative Dialogue - Michael not leaving vault">
+  If **Michael** does not leave the vault immediately, Trevor calls him.
+
+  **Trevor:** We gotta move.
+  **Alternative:** What's the hold up?
+</Accordion>
+
+### 🧍‍♂️ Jaspers' Last Stand
+> **Michael** and **Trevor** leave the vault.
+
+**Trevor:** Coming out, B.
+
+> Both exit the vault. As **Michael** walks out, a security guard hidden behind the wall grabs **Michael** from behind, takes his balaclava off, and holds him at gunpoint.
+
+**Jaspers:** Give it up! I got him! I saw your face. I'll remember you.
+
+> **Trevor** is seen aiming at the guard.
+
+**Michael:** You forget a thousand things every day. How 'bout you make sure this is one of 'em?
+
+> **Jaspers** panicks.
+
+**Jaspers:** I see it in his eyes. He's crazy.
+
+<AccordionGroup>
+<Accordion title="Alternative Dialogue - Trevor waiting">
+      If **Trevor** does not shoot immediately, **Michael** tries to convince **Jaspers** to drop the gun. **Trevor** doubles down.
+
+      **Michael:** No one's crazy. Alright, think. Be cool.
+      **Trevor:** That's right, pal. I'm fucking crazy.
+      **Jaspers:** Oh, boy!
+      **Michael:** Alright, look, you wanna live? Tell me you wanna live. Work this         out.
+      **Jaspers:** For sure I want to live! Tell him to put the gun down.
+      **Trevor:** Ain't gonna happen, pal. Make a move. I got all day.
+      **Trevor:** It looks like the cavalry ain't gonna show, pal!
+      > The view switches to Trevor, who is determined to shoot the guard.
+      
+      **Trevor:** I'll try to make this painless.
+</Accordion>
+<Accordion title="Trevor missing">
+  If **Trevor** misses the headshot, **Jasper** kills **Michael**, resulting in the mission failure.
+  **Mission failure: M. died.**
+</Accordion>
+</AccordionGroup>
+
+### 🏃‍♂️‍➡️ Crew Moving towards Garage
