Documentation edits made through Mintlify web editor

--- a/missions/story/prologue.mdx
+++ b/missions/story/prologue.mdx
@@ -6,7 +6,7 @@ icon: "flag-checkered"
 
 ### ⭐ Introduction - Breaking into Depot
 
-**Brad:** Get down there!
+**Brad:** Get down there!  
 **Michael:** Alright, everybody pays attention, no one gets hurt.
 
 > **Trevor** knocks his rifle on a window, with a panicking security guard behind it.
@@ -78,7 +78,7 @@ icon: "flag-checkered"
 
 > **Trevor** proceeds to plant explosives on the vault door.
 
-**Trevor:** Sit tight. I'll handle the plastic.
+**Trevor:** Sit tight. I'll handle the plastic.  
 **Brad:** Don't blow yourself up!
 
 <AccordionGroup>
@@ -95,15 +95,15 @@ icon: "flag-checkered"
   <Accordion title="Alternative Dialogue - Michael standing still">
     If **Michael** stands still, **Brad** calls out **Michael**. If Trevor comes back meanwhile, he will complain.
 
-    **Brad:** M! Get these assholes in the closet!
-    **Brad:** I said the closet! Get 'em in there! Come on!
-    **Trevor:** What is the problem? Why are they still out here? You were meant to lock 'em down. 
-    After **Trevor** complains, **Brad* aims at the hostages and makes them move to the back room.
+    **Brad:** M! Get these assholes in the closet!  
+    **Brad:** I said the closet! Get 'em in there! Come on!  
+    **Trevor:** What is the problem? Why are they still out here? You were meant to lock 'em down.  
+    After **Trevor** complains, **Brad** aims at the hostages and makes them move to the back room.
   </Accordion>
   <Accordion title="Alternative Dialogue - Michael killing a hostage">
     If **Michael** kills a hostage in the room, Brad complains before mission failure.
 
-    **Brad:** We need'em alive, dick!
+    **Brad:** We need'em alive, dick!  
     **Mission failure: A hostage died.**
   </Accordion>
 </AccordionGroup>
@@ -114,8 +114,8 @@ icon: "flag-checkered"
 
 > The hostages get upset, and agitated.
 
-**Male Employee:** What's he doing? He's going to kill us in here.
-**Male Employee:** Leave us alone.
+**Male Employee:** What's he doing? He's going to kill us in here.  
+**Male Employee:** Leave us alone.  
 **Second Male Employee:** We didn't do shit to you
 
 > Either **Trevor** re-enters the room after the hostages enter the back room or re-enters and waits until they get in. In either case, **Brad** locks the door after all hostages enter the back room.
@@ -126,20 +126,20 @@ icon: "flag-checkered"
 <Accordion title="Alternative Dialogue - Michael calls immediately">
   If **Michael** uses his phone to detonate the bomb immediately, he informs the crew.
 
-  **Michael:** I'm calling it.
+  **Michael:** I'm calling it.  
   **Alternative:** I'm making the call.
 </Accordion>
-<Accordion title="Alternative Dialogue  Michael doesn't call immediately">
+<Accordion title="Alternative Dialogue - Michael doesn't call immediately">
   If **Michael** does not phone immediately, **Brad** and **Trevor** call out **Michael**. The order of the dialogue is random.
 
-  **Brad:** Blow the door!
-  **Brad:** C'mon! C'mon!
-  **Brad:** We gonna do this?!
-  **Trevor:** Blow the fucking door!
-  **Trevor:** Call already.
-  **Trevor:** Come on. Call it in!
-  **Trevor:** Detonate!
-  **Trevor:** Get your cell out and dial.
+  **Brad:** Blow the door!  
+  **Brad:** C'mon! C'mon!  
+  **Brad:** We gonna do this?!  
+  **Trevor:** Blow the fucking door!  
+  **Trevor:** Call already.  
+  **Trevor:** Come on. Call it in!  
+  **Trevor:** Detonate!  
+  **Trevor:** Get your cell out and dial.  
   **Trevor:** We ain't got time for this crap!
 </Accordion>
 </AccordionGroup>
@@ -147,24 +147,24 @@ icon: "flag-checkered"
 ### 💰 Stealing Money
 > **Michael** enters the vault.
 
-**Trevor:** Oh, there it is.
-**Alternative:** That's the score.
+**Trevor:** Oh, there it is.  
+**Alternative:** That's the score.  
 **Alternative:** We're just taking the non-sequential notes.
 
 > **Michael** and **Trevor** start collecting the money.
 
-**Trevor:** Oh... there's enough here for us all to enjoy!
+**Trevor:** Oh... there's enough here for us all to enjoy!  
 **Michael:** Depends on how you look at it.
 
 > **Michael** finishes collecting the money. **Trevor** is standing at the entrance of the vault.
 
-**Trevor:** We gotta move.
+**Trevor:** We gotta move.  
 **Alternative:** We're done here, let's go.
 
 <Accordion title="Alternative Dialogue - Michael not leaving vault">
   If **Michael** does not leave the vault immediately, Trevor calls him.
 
-  **Trevor:** We gotta move.
+  **Trevor:** We gotta move.  
   **Alternative:** What's the hold up?
 </Accordion>
 
@@ -189,21 +189,218 @@ icon: "flag-checkered"
 <Accordion title="Alternative Dialogue - Trevor waiting">
       If **Trevor** does not shoot immediately, **Michael** tries to convince **Jaspers** to drop the gun. **Trevor** doubles down.
 
-      **Michael:** No one's crazy. Alright, think. Be cool.
-      **Trevor:** That's right, pal. I'm fucking crazy.
-      **Jaspers:** Oh, boy!
-      **Michael:** Alright, look, you wanna live? Tell me you wanna live. Work this         out.
-      **Jaspers:** For sure I want to live! Tell him to put the gun down.
-      **Trevor:** Ain't gonna happen, pal. Make a move. I got all day.
-      **Trevor:** It looks like the cavalry ain't gonna show, pal!
+      **Michael:** No one's crazy. Alright, think. Be cool.  
+      **Trevor:** That's right, pal. I'm fucking crazy.  
+      **Jaspers:** Oh, boy!  
+      **Michael:** Alright, look, you wanna live? Tell me you wanna live. Work this out.  
+      **Jaspers:** For sure I want to live! Tell him to put the gun down.  
+      **Trevor:** Ain't gonna happen, pal. Make a move. I got all day.  
+      **Trevor:** It looks like the cavalry ain't gonna show, pal!  
       > The view switches to Trevor, who is determined to shoot the guard.
       
       **Trevor:** I'll try to make this painless.
 </Accordion>
 <Accordion title="Trevor missing">
-  If **Trevor** misses the headshot, **Jasper** kills **Michael**, resulting in the mission failure.
+  If **Trevor** misses the headshot, **Jasper** kills **Michael**, resulting in the mission failure.  
   **Mission failure: M. died.**
 </Accordion>
 </AccordionGroup>
 
 ### 🏃‍♂️‍➡️ Crew Moving towards Garage
+> **Trevor** shoots the guard in the head.
+
+**Michael:** Fuck! You didn't have to do that!  
+**Trevor:** Let's get going. There'll be time for grieving later.  
+**Michael:** Yeah, you got that right.
+
+> The crew walk towards the door leading into the garage.
+
+**Brad:** Come on!  
+**Alternative:** Let's go.
+
+<AccordionGroup>
+<Accordion title="Alternative Dialogue - Michael moves slowly">
+  **Brad** and **Trevor** complain about Michael moving slowly.
+  
+  **Brad:** Move.  
+  **Trevor:** Come on!  
+  **Alternative:** Move!
+</Accordion>
+<Accordion title="Alternative Dialogue - Trevor does not take cover">   
+    **Brad** and **Michael** complain if **Trevor** does not take cover immediately. The order of the dialogue is random.
+
+    **Brad:** Get your fucking head down, the doors are about to blow!  
+    **Alternative:** I'm ready to do this. Now, get in cover!  
+    **Alternative:** What are you doing? Find some cover!
+    
+    **Michael:** Get in cover, T.  
+    **Alternative:** Quit fucking around and get down!  
+    **Alternative:** Wait until T's in cover, then set the charge.
+</Accordion>
+</AccordionGroup>
+
+### 💥 Blowing up the Garage Door
+> **Michael** and **Trevor** take cover as Brad sets a charge on the door.
+
+**Brad:** I'm setting the charges. They're on a timer, so brace yourselves!
+
+> As **Brad** sets the charge, he goes into cover. The charge blows up, opening the door. Sirens are heard outside.
+
+**Brad:** Just fucking perfect!  
+**Michael:** Oh, fuck. You hear that? Sirens.  
+**Brad:** Fuck the cops. T, hit the shutter switch.  
+**Trevor:** What's this? Local resistance?
+
+<Accordion title="Alternative Dialogue - Trevor standing still">
+**Brad** complains if **Trevor** does not proceed to the switch immediately. **Michael** informs the crew. The order of the dialogue is random.
+
+  **Brad:** Heads down. We got to go!  
+  **Michael:** Get out of here!  
+  **Alternative:** They're out here. Get ready.
+</Accordion>
+
+### 🚨 Engaging with Police
+> **Trevor** hits the switch of the shutter, which opens gradually. North Yankton State Patrol forces are seen outside.
+
+**Michael:** It ain't supposed to go down like this.  
+**Trevor:** It never is. Come on. Go.
+
+> The crew engages in a gunfight.
+
+<Accordion title="Alternative Dialogue - Trevor staying inside">
+  **Brad** and **Michael** call out **Trevor** if **Trevor** does not leave the building immediately. The order of the dialogue is random.
+
+  **Brad:** Move! Move! Move!  
+  **Alternative:** We keep going forward!  
+  **Michael:** Come on, guys.  
+  **Alternative:** Move! We're coming through!  
+  **Alternative:** What the fuck is this!?
+</Accordion>
+
+### 🔫 Gunfight Dialogue - Random Order
+
+<AccordionGroup>
+  <Accordion title="Brad">
+    **Brad:** Bring 'em.  
+    **Alternative:** Dumb fucking cops!  
+    **Alternative:** Fuck these guys!  
+    **Alternative:** Get in their faces.  
+    **Alternative:** I ain't laying down for them.  
+    **Alternative:** Move! Move! Move!  
+    **Alternative:** Move! We're coming through!  
+    **Alternative:** Press forward!  
+    **Alternative:** We bring it to 'em.  
+    **Alternative:** We keep going forward!
+  </Accordion>
+  <Accordion title="Michael">
+    **Michael:** Don't be an idiot!  
+    **Alternative:** Drop it, prick!  
+    **Alternative:** Get down!  
+    **Alternative:** What the fuck is this!?  
+    **Alternative:** Who snitched!?
+  </Accordion>
+  <Accordion title="Trevor">
+    **Trevor:** Back the fuck down!  
+    **Alternative:** Blame the pricks who called you out here!  
+    **Alternative:** Don't be as dumb as you look.  
+    **Alternative:** Get out the way!  
+    **Alternative:** Get out of the way or suffer the consequence.  
+    **Alternative:** They answered the wrong call!  
+    **Alternative:** Wrong profession!  
+    **Alternative:** You shouldn't have been a cop.
+  </Accordion>
+</AccordionGroup>
+
+### 🚗 Crew Walking towards Getaway Car
+> **Brad** and **Trevor** get their masks off. The crew fights the police forces on their way toward their escape vehicle.
+
+**Michael:** Let's get out of here!  
+**Alternative:** We got a window. Let's go!
+
+> The crew carries on, shooting their way out to the vehicle. The crew continues shouting at each other and cops, with random dialogues from the gunfight dialogue segment.
+The crew gets near the escape vehicle.
+
+**Trevor:** Can't be many more cops in this town.  
+**Michael:** This is fucked, man. The thing is blown.  
+**Trevor:** I got my share. It's still wide open!  
+**Brad:** Car's up here! Let's go!  
+**Trevor:** Move! Come on!  
+**Michael:** Kid mighta bailed. This wasn't in the job description.  
+**Trevor:** He better be there!
+
+<AccordionGroup>
+  <Accordion title="Alternative Dialogue - Crew moving slowly, Michael">
+  **Michael** calls the crew out if they move slowly, and the shooting prolongs.
+
+  **Michael:** Come on, get to the driver!  
+  **Alternative:** Let's get out of here!  
+  **Alternative:** Let's go! Get to the car!  
+  **Alternative:** Let's move! Come on!
+  </Accordion>
+  <Accordion title="Alternative Dialogue - Crew moving slowly, Brad">
+    **Brad** gets uneasy if the crew moves slowly and the shooting prolongs.
+
+  **Brad:** Every man for himself.  
+  **Alternative:** Let's go! Let's go!  
+  **Alternative:** Let's move it.
+  </Accordion>
+  <Accordion title="Alternative Dialogue - Michael not entering car">
+    **Brad** complains if **Michael** does not enter the car, whereas the rest of the crew gets into the car.
+
+  **Brad:** Get in here.  
+  **Alternative:** Get your ass in here.
+  </Accordion>
+  <Accordion title="Alternative Dialogue - Crew moving swiftly">
+    Ironically, the driver will complain if the crew arrives at the car early.
+
+  **Driver:** What took ya so long?  
+  **Trevor:** Shut the fuck up and drive.
+  </Accordion>
+</AccordionGroup>
+
+### 🏃‍♂️ Escaping with the getaway car
+> After killing the last officers, the crew gets in the car, where their getaway driver is waiting. The car drives away.
+
+**Brad:** Did you see that shit? I fuckin' put that bitch's face against the glass. Did you see that?
+**Michael:** Yeah, you're a real stallion.
+**Trevor:** Bahbahbahbahbahbahbahbahbah!
+> A police car starts pursuing the vehicle.
+
+**Driver:** Aww, fuck! How'd that happen?
+**Brad:** Go! Go! Go! Go!
+**Michael:** Fuck!
+
+> **Trevor** breaks the window with his rifle and shoots at the police car.
+
+**Driver:** Jeez, I think they're gonna...
+
+> The officer sitting in the passenger seat shoots the getaway driver in the head.
+
+**Michael:** Aw, fuck! Local yokel's bought it!
+
+> **Michael** tosses the driver's body out of the car and takes the wheel.
+
+**Brad:** That guy's a dick...
+**Michael:** [to the cops] Fuck you too.
+
+> **Michael** hits the police car. The police car goes out of control and crashes into a tree.
+
+**Brad:** Fuck you!
+**Crew:** Wooo!
+**Trevor:** Come on! Let's get to the chopper! We move quick, we can beat the train.
+**Michael:** We're getting there!
+**Brad:** Man, I'll believe in this bird when I get eyes on it.
+
+<Accordion title="Alternative Dialogue - Michael driving slowly">
+  If **Michael** drives slowly, an alternative dialogue will occur. **Brad** gets uneasy. **Michael** tries to calm him down.
+
+  **Trevor:** Mike.
+  **Michael:** I say there's a chopper, there's a chopper. We stick to the plan, we're home free.
+  **Brad:** Alright! Yeah! Fuck 'em, man! Fuck 'em!
+  **Trevor:** Whoo. Hahahaha.
+  **Brad:** Man, I thought this score was supposed to be an easy take? It's all gone              crazy.
+  **Michael:** Yeah. I hear you. We gotta follow the plan - everything'll work out.
+  **Brad:** Pair of neurotic idiots.
+</Accordion>
+
+### 💥 Crash into the Train and Aftermath
